--- a/app/src/main/res/layout/workout.xml
+++ b/app/src/main/res/layout/workout.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".workout.WorkOutFragment">
+    tools:context=".workout.WorkoutFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
